Add search functionality

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ github_username:  lrj-web
 remote_theme: "mmistakes/jekyll-theme-basically-basic"
 plugins:
   - jekyll-feed
-
+search: true
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
