--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ github_username:  lrj-web
 remote_theme: "mmistakes/so-simple-theme@3.2.0"
 plugins:
   - jekyll-feed
+read_time: true
+paginate: 10  # amount of posts to show per page
+paginate_path: /page:num/
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
