Add profile picture

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,3 +8,4 @@ James:
     - title: GitHub
       url: https://github.com/jamesatjaminit
       icon: fab fa-github-square
+  picture: "/images/profile/james.png"
