--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ read_time: true
 paginate: 10  # amount of posts to show per page
 paginate_path: /page:num/
 search: true
-
+copyright: "Licenced under Creative Commons Attribution Share Alike 4.0 International"
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
