--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
+- title: Home
+  url: /
 - title: About
   url: /about/
 - title: Twitter
   url: https://twitter.com/LeedsRaspJam
 - title: Eventbrite
   url: https://www.eventbrite.co.uk/o/the-foundation-for-digital-creativity-19981872804
-- title: Search
-  url: /search/
