--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,3 +6,5 @@
   url: https://twitter.com/LeedsRaspJam
 - title: Eventbrite
   url: https://www.eventbrite.co.uk/o/the-foundation-for-digital-creativity-19981872804
+- title: Search
+  url: /search/
