--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
   url: /
 - title: About
   url: /about/
+- title: Contact
+  url: /contact/
 - title: Twitter
   url: https://twitter.com/LeedsRaspJam
 - title: Eventbrite
