--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: hello@leedsraspjam.co.uk
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to the official site of Leeds Raspberry Jam!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://leedsraspjam.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: leedsraspjam
 github_username:  lrj-web
 
