--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ paginate: 10  # amount of posts to show per page
 paginate_path: /page:num/
 copyright: "Licenced under Creative Commons Attribution Share Alike 4.0 International<br><a href=\"https://github.com/lrj-web/www/\" target=\"_blank\">View Source on Github</a>"
 logo: /images/misc/logo.png
+excerpt_separator: <!--more-->
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
