--- a/_config.yml
+++ b/_config.yml
@@ -1,58 +1,45 @@
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
+# which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# 'jekyll serve'. If you change this file, please restart the server process.
 
+# Site settings
 title: Leeds Raspberry Jam
 email: hello@leedsraspjam.co.uk
-description: >- # this means to ignore newlines until "baseurl:"
-  Welcome to the official site of Leeds Raspberry Jam!
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://leedsraspjam.co.uk" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: leedsraspjam
-github_username:  lrj-web
+description: > # this means to ignore newlines until "baseurl:"
+  Main website for the Leeds Raspberry Jam events.
 
+
+baseurl: "/lrj-www" # the subpath of your site, e.g. /blog
+url: "https://www.leedsraspjam.co.uk" # the base hostname & protocol for your site
+
+#sidebar
+default-image: default.jpg # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
+
+#footer
 # Build settings
-remote_theme: "mmistakes/so-simple-theme@3.2.0"
-plugins:
-  - jekyll-feed
-read_time: true
-paginate: 10  # amount of posts to show per page
+markdown: kramdown
+permalink: /:title/
+paginate: 6
 paginate_path: /page:num/
-copyright: "Licenced under Creative Commons Attribution Share Alike 4.0 International<br><a href=\"https://github.com/lrj-web/www/\" target=\"_blank\">View Source on Github</a>"
-logo: /images/misc/logo.png
-excerpt_separator: <!--more-->
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+
+#social
+facebook: http://facebook.com/leedsraspjam
+twitter: http://twitter.com/@leedsraspjam
+github: http://github.com/leedsraspjam
+email: hello@leedsraspjam.co.uk
+
+#facebook like box
+fb-like-box: yes
+fb-app-id: 549480635219583
+fb-page-url: https://www.facebook.com/leedsraspjam/
+fb-page-title: leedsraspjam
+
+# Sass style
+sass:
+  style: compressed
+
+# Ruby Gems
+plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-redirect-from]
