--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Main website for the Leeds Raspberry Jam events.
 
 
-baseurl: "/lrj-www" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://www.leedsraspjam.co.uk" # the base hostname & protocol for your site
 
 #sidebar
