Remove @ from twitter link
Its not needed as twitter redirects to the link without the @ anyway

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ paginate_path: /page:num/
 
 #social
 facebook: http://facebook.com/leedsraspjam
-twitter: http://twitter.com/@leedsraspjam
+twitter: http://twitter.com/leedsraspjam
 github: http://github.com/leedsraspjam
 email: hello@leedsraspjam.co.uk
 
